updated padding on sidebar-menu to 1rem to fix the dropdown on mobile

--- a/decidim-admin/app/packs/stylesheets/decidim/admin/_sidebar-menu.scss
+++ b/decidim-admin/app/packs/stylesheets/decidim/admin/_sidebar-menu.scss
@@ -1,5 +1,5 @@
 .sidebar-menu {
-  @apply p-8 flex-none w-full md:w-fit max-w-full md:max-w-xs;
+  @apply p-4 flex-none w-full md:w-fit max-w-full md:max-w-xs;
 
   &__item {
     a {
